--- a/css/style.css
+++ b/css/style.css
@@ -50,7 +50,7 @@ button:hover{
 .dropdown-menu {
   display: none;
 }
-.active {
+.dropdown-menu.active {
   background-color: white;
   padding: 5px 5px;
   box-shadow: 0 2px 5px green;
