--- a/css/style.css
+++ b/css/style.css
@@ -5,9 +5,11 @@
     font-family: 'Bangers', monospace;
 }
 body{
-
+ background-image: url("https://imgsrc.cineserie.com/2020/12/cobra-kai-une-bande-annonce-1.jpg?ver=1");
+ background-size: cover;
+ background-repeat: no-repeat;
 }
-img:hover {
+img:hover{
   animation: shake 0.5s;
   animation-iteration-count: infinite;
 }
@@ -33,11 +35,12 @@ img:hover {
   display: flex;
   justify-content: space-around;
   align-items: center;
-  margin-top: 50px;
+  margin-top: 30px;
   /* overflow: hidden; */
   background-color: #FEDE00;
   border-top: 2px solid black;
   border-bottom: 2px solid black;
+  box-shadow:2px 2px 10px #FEF5A8;
 }
 .sx{
   font-size: 24px;
@@ -48,6 +51,9 @@ img:hover {
 }
 .dx{
   font-size: 22px;
+}
+.dx li{
+  padding-right:25px;
 }
 .topnav>ul{
   list-style: none;
@@ -78,7 +84,7 @@ button {
   border-radius: 20px;
   border: 2px solid #C93916;
   cursor : pointer;
-  transition: 0.2s;
+  transition:.1s;
 }
 button:hover{
   background-color: #C93916;
@@ -94,12 +100,13 @@ button:hover{
 }
 .lista{
   position: absolute;
-  top: 105px;
-  text-align: center;
+  top: 84px;
+  text-align: right;
   line-height: 1.6;
   background-color: #FEDE00;
   padding: 5px 5px;
-  box-shadow: 0 2px 5px #C93916;
+  border: 2px solid black;
+  box-shadow:2px 2px 10px #FEF5A8;
 }
 i.rotate{
   transform: rotate(180deg);
