--- a/css/style.css
+++ b/css/style.css
@@ -86,6 +86,9 @@ button {
   cursor : pointer;
   transition:.1s;
 }
+button:focus{
+  outline:none;
+}
 button:hover{
   background-color: #C93916;
   color: white;
