--- a/css/style.css
+++ b/css/style.css
@@ -78,11 +78,12 @@ img:hover{
 button {
   margin-left: 20px;
   font-size: 17px;
-  color:#C93916;
+
   padding: 10px 10px;
-  background-color: white;
+  background-color: #C93916;
+  color: white;
   border-radius: 20px;
-  border: 2px solid #C93916;
+
   cursor : pointer;
   transition:.1s;
 }
@@ -90,8 +91,9 @@ button:focus{
   outline:none;
 }
 button:hover{
-  background-color: #C93916;
-  color: white;
+  background-color: white;
+  border: 2px solid #C93916;
+  color:#C93916;
   transform: scale(1.1);
 }
 /* DROPDOWN */
@@ -103,13 +105,17 @@ button:hover{
 }
 .lista{
   position: absolute;
-  top: 84px;
+  top: 83px;
   text-align: right;
   line-height: 1.6;
   background-color: #FEDE00;
   padding: 5px 5px;
   border: 2px solid black;
   box-shadow:2px 2px 10px #FEF5A8;
+}
+.lista li:hover,
+.dx a:hover{
+  color: red
 }
 i.rotate{
   transform: rotate(180deg);
