--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,15 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'Bangers', monospace;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'Bangers', monospace;
 }
-body{
- background-image: url("https://imgsrc.cineserie.com/2020/12/cobra-kai-une-bande-annonce-1.jpg?ver=1");
- background-size: cover;
- background-repeat: no-repeat;
+.container{
+  height: 100vh;
+  width: 100vw;
+  background-image: url("https://imgsrc.cineserie.com/2020/12/cobra-kai-une-bande-annonce-1.jpg?ver=1");
+  background-size: cover;
+  background-repeat: no-repeat;
 }
 img:hover{
   animation: shake 0.5s;
@@ -27,15 +29,12 @@ img:hover{
   100% { transform: translate(1px, -2px) rotate(-1deg); }
   }
 
-.container{
-  width: 100%;
-}
 .topnav{
-  display: flex;
+  width: 100%;
+  position: fixed;
+  margin-top: 2%;
   display: flex;
   justify-content: space-around;
-  align-items: center;
-  margin-top: 30px;
   /* overflow: hidden; */
   background-color: #FEDE00;
   border-top: 2px solid black;
@@ -55,7 +54,8 @@ img:hover{
 .dx li{
   padding-right:25px;
 }
-.topnav>ul{
+.topnav>ul,
+footer ul{
   list-style: none;
   display: flex;
   justify-content: space-around;
@@ -78,12 +78,10 @@ img:hover{
 button {
   margin-left: 20px;
   font-size: 17px;
-
   padding: 10px 10px;
   background-color: #C93916;
   color: white;
   border-radius: 20px;
-
   cursor : pointer;
   transition:.1s;
 }
@@ -105,7 +103,7 @@ button:hover{
 }
 .lista{
   position: absolute;
-  top: 83px;
+  top: 99%;
   text-align: right;
   line-height: 1.6;
   background-color: #FEDE00;
@@ -122,4 +120,54 @@ i.rotate{
 }
 .lista ul{
   list-style: none;
+}
+
+/* marquee */
+footer {
+  width: 100%;
+  position: absolute;
+  bottom : 5%;
+  font-size: 25px
+}
+.banner{
+  background-color: #FEDE00;
+  border-top: 2px solid black;
+  border-bottom: 2px solid black;
+  box-shadow:2px 2px 10px #FEF5A8;
+}
+#maindiv{
+  border: 2px solid black;
+  overflow: hidden;
+  white-space: nowrap;
+}
+
+#slogan {
+  width: 100%;
+  display: inline-block;
+  animation: marquee 18s linear infinite;
+}
+
+#sloganR {
+  width: 100%;
+  display: inline-block;
+  animation: marquee2 18s linear infinite;
+  animation-delay: 9s;
+}
+
+@keyframes marquee {
+  from {
+    transform: translateX(100%);
+  }
+  to {
+    transform: translateX(-100%);
+  }
+}
+
+@keyframes marquee2 {
+  from {
+    transform: translateX(0%);
+  }
+  to {
+    transform: translateX(-200%);
+  }
 }
