--- a/css/style.css
+++ b/css/style.css
@@ -6,12 +6,12 @@
 }
 .container{
   height: 100vh;
-  width: 100vw;
+  width: 100%;
   background-image: url("https://imgsrc.cineserie.com/2020/12/cobra-kai-une-bande-annonce-1.jpg?ver=1");
   background-size: cover;
   background-repeat: no-repeat;
 }
-img:hover{
+.logo:hover{
   animation: shake 0.5s;
   animation-iteration-count: infinite;
 }
@@ -112,8 +112,9 @@ button:hover{
   box-shadow:2px 2px 10px #FEF5A8;
 }
 .lista li:hover,
-.dx a:hover{
-  color: red
+.dx a:hover,
+footer li:hover{
+  color: red;
 }
 i.rotate{
   transform: rotate(180deg);
@@ -153,7 +154,17 @@ footer {
   animation: marquee2 18s linear infinite;
   animation-delay: 9s;
 }
-
+#slogan img,
+#sloganR img{
+  height: 48px;
+  margin-bottom: -15%;
+  transition: 1s;
+  z-index: 1;
+}
+#slogan img:hover,
+#sloganR img:hover{
+  transform: scale(2);
+}
 @keyframes marquee {
   from {
     transform: translateX(100%);
